--- a/project/blog.html
+++ b/project/blog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><link rel="stylesheet" href="campus.css">
+<head><link rel="stylesheet" href="./css/campus.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
     <div class="campuss">
         <nav>
-            <a href="#" class="logo"><img src="logo.png"></a>
+            <a href="#" class="logo"><img src="./img/logo.png"></a>
             <div class="nav-links">
                 <ul>
                     <a href="campus.html"><li>Home</li></a>
@@ -19,12 +19,12 @@
                     <a href="contact.html"><li>contact</li></a>
                 </ul>
             </div>
-            <a href="#" class="menu"><img src="icons8-menu-24.png" alt=""></a>
+            <a href="#" class="menu"><img src="./img/icons8-menu-24.png" alt=""></a>
         </nav>
         <div class="abt"><h1>Our Certificate & Online Programs For 2021</h1></div>
     </div>
     <div class="nav-lnks">
-        <img src="icons8-multiply-24(1).png" class="close">
+        <img src="./img/icons8-multiply-24(1).png" class="close">
         <ul>
             <a href="campus.html"><li>Home</li></a>
            <a href="about.html"> <li>about</li></a>
@@ -37,7 +37,7 @@
     <section>
         <div class="blog">
             <div class="right">
-                <a href="#"><img src="cafeteria.png" alt=""></a>
+                <a href="#"><img src="./img/cafeteria.png" alt=""></a>
                 <div class="blk">
                     <h4>Our Cirtificate And Online Programs</h4>
                     <p> Eaque ipsum non, incidunt tempore eveniet cumque dolore ex 
@@ -101,14 +101,14 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                      <br>Id exercitationem temporibus consectetur repellat accusamus libero repudiandae nulla consequatur eos dolorem.</p>
                      <p>
-                         <img src="icons8-facebook-logo-16(1).png" alt="">
-                         <img src="icons8-instagram-logo-16.png" alt="">
-                         <img src="icons8-twitter-16.png" alt="">
+                         <img src="./img/icons8-facebook-logo-16(1).png" alt="">
+                         <img src="./img/icons8-instagram-logo-16.png" alt="">
+                         <img src="./img/icons8-twitter-16.png" alt="">
                      </p>
             </div>
         </footer>
     </section>
 
-    <script src="campus.js"></script>
+    <script src="./script/campus.js"></script>
 </body>
 </html>
