--- a/project/campus.html
+++ b/project/campus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="campus.css">
+    <link rel="stylesheet" href="./css/campus.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
     <section>
         <div class="campus">
             <nav>
-                <a href="#" class="logo"><img src="logo.png"></a>
+                <a href="#" class="logo"><img src="./img/logo.png"></a>
                 <div class="nav-links">
                     <ul>
                         <a href="campus.html"><li>Home</li></a>
@@ -21,10 +21,10 @@
                         <a href="contact.html"><li>contact</li></a>
                     </ul>
                 </div>
-                <a href="#" class="menu"><img src="icons8-menu-24.png" alt=""></a>
+                <a href="#" class="menu"><img src="./img/icons8-menu-24.png" alt=""></a>
             </nav>
                 <div class="nav-lnks">
-                    <img src="icons8-multiply-24(1).png" class="close">
+                    <img src="./img/icons8-multiply-24(1).png" class="close">
                     <ul>
                         <a href="campus.html"><li>Home</li></a>
                        <a href="about.html"> <li>about</li></a>
@@ -76,15 +76,15 @@
         <h1>our global campus</h1>
         <div class="global">
             <div class="glo-design">
-                <img src="london.png" alt="">
+                <img src="./img/london.png" alt="">
                 <p>london</p>
             </div>
             <div class="glo-design">
-                <img src="newyork.png" alt="">
+                <img src="./img/newyork.png" alt="">
                 <p>newyork</p>
             </div>
             <div class="glo-design">
-                <img src="washington.png" alt="">
+                <img src="./img/washington.png" alt="">
                 <p>washinton</p>
             </div>
         </div>
@@ -94,15 +94,15 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, neque!</p>
         <div class="fact">
             <div class="ours">
-                <img src="library.png">
+                <img src="./img/library.png">
                 <p>World Class Library</p>
             </div>
             <div class="ours">
-                <img src="basketball.png">
+                <img src="./img/basketball.png">
                 <p>Largest Playing Ground</p>
             </div>
             <div class="ours">
-                <img src="cafeteria.png">
+                <img src="./img/cafeteria.png">
                 <p>Tasty and Healthy Food</p>
             </div>
         </div>
@@ -113,30 +113,30 @@
         </div>
         <div class="students">
             <div class="profil">
-                <a href="#" class="pro"> <img src="c.jpg" class="pro"></a>
+                <a href="#" class="pro"> <img src="./img/c.jpg" class="pro"></a>
               <div>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Error commodi ab autem
                     voluptates <br>sapiente placeat ratione <br>reprehenderit doloribus blanditiis nesciunt!</p>
                     <h3>Kwashie Cephas</h3>
                     <p>
-                        <img src="icons8-star-16.png" alt="">
-                        <img src="icons8-star-filled-16.png" alt="">
-                        <img src="icons8-star-half-empty-16(1).png" alt="">
-                        <img src="icons8-star-half-empty-16.png" alt="">
+                        <img src="./img/icons8-star-16.png" alt="">
+                        <img src="./img/icons8-star-filled-16.png" alt="">
+                        <img src="./img/icons8-star-half-empty-16(1).png" alt="">
+                        <img src="./img/icons8-star-half-empty-16.png" alt="">
                     </p>
               </div>
             </div>
             <div class="profil">
-               <a href="#" class="pro"> <img src="c.jpg" class="pro"></a>
+               <a href="#" class="pro"> <img src="./img/c.jpg" class="pro"></a>
               <div>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Error commodi ab autem
                     voluptates <br>sapiente placeat ratione <br>reprehenderit doloribus blanditiis nesciunt!</p>
                     <h3>Kwashie Cephas</h3>
                     <p>
-                        <img src="icons8-star-16.png" alt="">
-                        <img src="icons8-star-filled-16.png" alt="">
-                        <img src="icons8-star-half-empty-16(1).png" alt="">
-                        <img src="icons8-star-half-empty-16.png" alt="">
+                        <img src="./img/icons8-star-16.png" alt="">
+                        <img src="./img/icons8-star-filled-16.png" alt="">
+                        <img src="./img/icons8-star-half-empty-16(1).png" alt="">
+                        <img src="./img/icons8-star-half-empty-16.png" alt="">
                     </p>
               </div>
             </div>
@@ -157,13 +157,13 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                      <br>Id exercitationem temporibus consectetur repellat accusamus libero repudiandae nulla consequatur eos dolorem.</p>
                      <p>
-                         <img src="icons8-facebook-logo-16(1).png" alt="">
-                         <img src="icons8-instagram-logo-16.png" alt="">
-                         <img src="icons8-twitter-16.png" alt="">
+                         <img src="./img/icons8-facebook-logo-16(1).png" alt="">
+                         <img src="./img/icons8-instagram-logo-16.png" alt="">
+                         <img src="./img/icons8-twitter-16.png" alt="">
                      </p>
             </div>
         </footer>
     </section>
-    <script src="campus.js"></script>
+    <script src="./script/campus.js"></script>
 </body>
 </html>
