--- a/project/courses.html
+++ b/project/courses.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="campus.css">
+    <link rel="stylesheet" href="./css/campus.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 <body>
     <div class="campuss">
         <nav>
-            <a href="#" class="logo"><img src="logo.png"></a>
+            <a href="#" class="logo"><img src="./img/logo.png"></a>
             <div class="nav-links">
                 <ul>
                     <a href="campus.html"><li>Home</li></a>
@@ -20,10 +20,10 @@
                    <a href="contact.html"> <li>contact</li></a>
                 </ul>
             </div>
-            <a href="#" class="menu"><img src="icons8-menu-24.png" alt=""></a>
+            <a href="#" class="menu"><img src="./img/icons8-menu-24.png" alt=""></a>
         </nav>
         <div class="nav-lnks">
-            <img src="icons8-multiply-24(1).png" class="close">
+            <img src="./img/icons8-multiply-24(1).png" class="close">
             <ul>
                 <a href="campus.html"><li>Home</li></a>
                <a href="about.html"> <li>about</li></a>
@@ -65,15 +65,15 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, neque!</p>
             <div class="fact">
                 <div class="ours">
-                    <img src="library.png">
+                    <img src="./img/library.png">
                     <p>World Class Library</p>
                 </div>
                 <div class="ours">
-                    <img src="basketball.png">
+                    <img src="./img/basketball.png">
                     <p>Largest Playing Ground</p>
                 </div>
                 <div class="ours">
-                    <img src="cafeteria.png">
+                    <img src="./img/cafeteria.png">
                     <p>Tasty and Healthy Food</p>
                 </div>
             </div>
@@ -85,13 +85,13 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                          <br>Id exercitationem temporibus consectetur repellat accusamus libero repudiandae nulla consequatur eos dolorem.</p>
                          <p>
-                             <img src="icons8-facebook-logo-16(1).png" alt="">
-                             <img src="icons8-instagram-logo-16.png" alt="">
-                             <img src="icons8-twitter-16.png" alt="">
+                             <img src="./img/icons8-facebook-logo-16(1).png" alt="">
+                             <img src="./img/icons8-instagram-logo-16.png" alt="">
+                             <img src="./img/icons8-twitter-16.png" alt="">
                          </p>
                 </div>
             </footer>
         </section>
-        <script src="campus.js"></script>
+        <script src="./script/campus.js"></script>
 </body>
 </html>
